--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}" />
     <script
-        src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-        crossorigin="anonymous">
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous">
     </script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <style type="text/css">
         body{
             background-color: #DDD;
@@ -15,10 +17,15 @@
         canvas{
             background-color: white;
         }
+        .line {
+            fill: none;
+            stroke: #ffab00;
+            stroke-width: 3;
+        }
     </style>
     <script type="text/javascript">
         function querySignal(){
-            $.ajax({
+            $.getJSON({
                 url: "/signal",
                 success: function(result) {
                     console.log(result);
@@ -31,10 +38,59 @@
     </script>
 </head>
 <body>
-<canvas id="signal_canvas" width="1000px" height="200px"></canvas>
-<canvas id="psd_canvas"  width="200" height="200px"></canvas>
-<script type="text/javascript">
-    querySignal();
-</script>
+
+    <script type="text/javascript">
+        // set the dimensions and margins of the graph
+        var margin = {top: 20, right: 20, bottom: 30, left: 50},
+            width = 960 - margin.left - margin.right,
+            height = 500 - margin.top - margin.bottom;
+
+        // set the ranges
+        var x = d3.scaleLinear().range([0, width]);
+        var y = d3.scaleLinear().range([height, 0]);
+
+        // define the line
+        var valueline = d3.line()
+            .x(function(d) { return x(d.x); })
+            .y(function(d) { return y(d.y); });
+
+        // append the svg obgect to the body of the page
+        // appends a 'group' element to 'svg'
+        // moves the 'group' element to the top left margin
+        var svg = d3.select("body").append("svg")
+            .attr("width", width + margin.left + margin.right)
+            .attr("height", height + margin.top + margin.bottom)
+          .append("g")
+            .attr("transform",
+                  "translate(" + margin.left + "," + margin.top + ")");
+
+        console.log("GETTIN DATA");
+
+        // Scale the range of the data
+        x.domain([0, 3]);
+        y.domain([-3, 3]);
+
+        // Add the X Axis
+        svg.append("g")
+            .attr("transform", "translate(0," + height + ")")
+            .call(d3.axisBottom(x));
+
+        // Add the Y Axis
+        svg.append("g")
+            .call(d3.axisLeft(y));
+
+        d3.json("/signal").then(function(data) {
+            console.log(data);
+
+            // Add the valueline path.
+            svg.append("path")
+                .data([data])
+                .attr("class", "line")
+                .attr("d", valueline);
+        });
+    </script>
+    <script type="text/javascript">
+        //querySignal();
+    </script>
 </body>
 </html>
