--- a/templates/index.html
+++ b/templates/index.html
@@ -24,71 +24,171 @@
         }
     </style>
     <script type="text/javascript">
-        function querySignal(){
-            $.getJSON({
-                url: "/signal",
-                success: function(result) {
-                    console.log(result);
-                }
+        var data_buffer = 0;
+        var run = true;
+        var signal_x, psd_x, signalLine, psdLine, signal_plot, psd_plot;
+        var refresh_rate = 1; //milliseconds
+
+        function queryPSD(){
+            d3.json("/psd").then(function(data) {
+                data_buffer = data;
+
+                // Add the valueline path.
+                svg.select("#psd")
+                    .data([data])
+                    .attr("d", valueline);
+
+                x.domain(d3.extent(data, function(d) { return d.t2; }));
+                d3.select(".x_axis")
+                    .call(d3.axisBottom(x).tickFormat(d3.timeFormat("%I:%M:%S.%L")));
+
+                if(run) setTimeout(querySignal, refresh_rate);
+                run = true;
             });
         }
-        function renderSignal(){
+
+        function querySignal(){
+            d3.json("/signal").then(function(data) {
+                data_buffer = data;
+
+                data.forEach(function(d) {
+                      d.t2 = new Date(d.t*1000)
+                  });
+
+                // Add the valueline path.
+                signal_plot.select("#signal")
+                    .data([data])
+                    .attr("d", signalLine);
+
+                psd_x.domain(d3.extent(data, function(d) { return d.t2; }));
+                d3.select(".x_axis")
+                    .call(d3.axisBottom(psd_x).tickFormat(d3.timeFormat("%I:%M:%S.%L")));
+
+                if(run) setTimeout(querySignal, refresh_rate);
+                run = true;
+            });
 
         }
+
     </script>
 </head>
 <body>
 
     <script type="text/javascript">
-        // set the dimensions and margins of the graph
-        var margin = {top: 20, right: 20, bottom: 30, left: 50},
-            width = 960 - margin.left - margin.right,
-            height = 500 - margin.top - margin.bottom;
 
-        // set the ranges
-        var x = d3.scaleLinear().range([0, width]);
-        var y = d3.scaleLinear().range([height, 0]);
+        function createSignalPlot() {
+            // set the dimensions and margins of the graph
+            let margin = {top: 20, right: 20, bottom: 30, left: 50},
+                    width = 960 - margin.left - margin.right,
+                    height = 250 - margin.top - margin.bottom;
 
-        // define the line
-        var valueline = d3.line()
-            .x(function(d) { return x(d.x); })
-            .y(function(d) { return y(d.y); });
+            // set the ranges
+            let x = d3.scaleTime().range([0, width]);
+            let y = d3.scaleLinear().range([height, 0]);
+            signal_x = x;
+            
+            // define the line
+            var signalLine = d3.line()
+                    .x(function (d) {
+                        return x(d.t2);
+                    })
+                    .y(function (d) {
+                        return y(d.y);
+                    });
 
-        // append the svg obgect to the body of the page
-        // appends a 'group' element to 'svg'
-        // moves the 'group' element to the top left margin
-        var svg = d3.select("body").append("svg")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
-          .append("g")
-            .attr("transform",
-                  "translate(" + margin.left + "," + margin.top + ")");
+            // append the svg obgect to the body of the page
+            // appends a 'group' element to 'svg'
+            // moves the 'group' element to the top left margin
+            signal_plot = d3.select("body").append("svg")
+                    .attr("width", width + margin.left + margin.right)
+                    .attr("height", height + margin.top + margin.bottom)
+                    .append("g")
+                    .attr("transform",
+                            "translate(" + margin.left + "," + margin.top + ")");
 
-        console.log("GETTIN DATA");
+            // Scale the range of the data
+            x.domain([0, 3]);
+            y.domain([-3, 3]);
 
-        // Scale the range of the data
-        x.domain([0, 3]);
-        y.domain([-3, 3]);
+            // Add the X Axis
+            signal_plot.append("g")
+                    .attr("class", "x_axis")
+                    .attr("transform", "translate(0," + height + ")")
+                    .call(d3.axisBottom(x));
 
-        // Add the X Axis
-        svg.append("g")
-            .attr("transform", "translate(0," + height + ")")
-            .call(d3.axisBottom(x));
+            // Add the Y Axis
+            signal_plot.append("g")
+                    .call(d3.axisLeft(y));
 
-        // Add the Y Axis
-        svg.append("g")
-            .call(d3.axisLeft(y));
+            signal_plot.append("path")
+                    .data([[{t: 0, t2: new Date(0), y: 0}, {t: 3, t2: new Date(3), y: 0}]])
+                    .attr("id", "signal")
+                    .attr("class", "line")
+                    .attr("d", signal_line);
+        }
+        querySignal()
 
-        d3.json("/signal").then(function(data) {
-            console.log(data);
-
-            // Add the valueline path.
-            svg.append("path")
-                .data([data])
-                .attr("class", "line")
-                .attr("d", valueline);
-        });
     </script>
+
+    <script type="text/javascript">
+
+        function createPSDPlot() {
+            // set the dimensions and margins of the graph
+            let margin = {top: 20, right: 20, bottom: 30, left: 50},
+                    width = 500 - margin.left - margin.right,
+                    height = 500 - margin.top - margin.bottom;
+
+            // set the ranges
+            let x = d3.scaleLinear().range([0, width]);
+            let y = d3.scaleLinear().range([height, 0]);
+
+            // define the line
+            let valueline = d3.line()
+                    .x(function (d) {
+                        return x(d.frequency);
+                    })
+                    .y(function (d) {
+                        return y(d.amplitude);
+                    });
+
+            // append the svg obgect to the body of the page
+            // appends a 'group' element to 'svg'
+            // moves the 'group' element to the top left margin
+            let svg = d3.select("body").append("svg")
+                    .attr("width", width + margin.left + margin.right)
+                    .attr("height", height + margin.top + margin.bottom)
+                    .append("g")
+                    .attr("transform",
+                            "translate(" + psd_margin.left + "," + psd_margin.top + ")");
+
+            // Scale the range of the data
+            x.domain([0, 60]);
+            y.domain([0, 1]);
+
+            // Add the X Axis
+            svg.append("g")
+                    .attr("class", "x_axis")
+                    .attr("transform", "translate(0," + height + ")")
+                    .call(d3.axisBottom(x));
+
+            // Add the Y Axis
+            svg.append("g")
+                    .call(d3.axisLeft(y));
+
+            svg.append("path")
+                    .data([[{frequency: 0, amplitude: 0}, {frequency: 60, amplitude: 0}]])
+                    .attr("id", "psd")
+                    .attr("class", "line")
+                    .attr("d", valueline);
+
+
+        }
+
+        createPSDPlot();
+        queryPSD();
+
+    </script>
+
     <script type="text/javascript">
         //querySignal();
     </script>
