--- a/templates/index.html
+++ b/templates/index.html
@@ -215,14 +215,14 @@
     </script>
     <table>
         <tr>
-            <td>Target Sample Frequency</td>
+            <td>Target Sample Frequency (Hz)</td>
             <td id="profile_target"></td>
         </tr>
         <tr>
-            <td>Average Sample Frequency</td>
+            <td>Average Sample Frequency (Hz)</td>
             <td id="profile_average"></td>
         </tr><tr>
-            <td>STD Sample Frequency</td>
+            <td>Deviation Sample Frequency (Hz)</td>
             <td id="profile_std"></td>
         </tr>
     </table>
